Fixed some layout issues.

--- a/css/buttons.scss
+++ b/css/buttons.scss
@@ -134,6 +134,12 @@ button {
 
 }
 
+.center {
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+}
+
 button.product {
 
     &:nth-of-type(1) { background-image: url("../img/model1.svg"); }
@@ -142,6 +148,7 @@ button.product {
     
     position: relative;
     background-size: cover;
+    background-position: center;
     width: 350px;
     height: 400px;
     background-color: #eeeeee;
